FIX: add js scrollbar to calendar list view

--- a/css/eventbox.css
+++ b/css/eventbox.css
@@ -88,7 +88,7 @@
     width: 100%;
     z-index: 1;
     opacity: 0;
-    transition: opacity 0.5s ease-in;
+    transition: opacity 1.0s ease-in;
 }
 
 .event-overlay {
@@ -118,6 +118,10 @@
 .event-box-team {
     width: 100%;
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.event-box-team:hover {
+    text-decoration: underline;
 }
 
 .event-box-team .youtube-box {
